Fix long bookmark host squishes icon in 2x1 bookmark widget #268

--- a/src/plugins/bookmark/styles.scss
+++ b/src/plugins/bookmark/styles.scss
@@ -24,6 +24,7 @@
             flex-direction: column;
             justify-content: space-between;
             align-self: stretch;
+            overflow: hidden;
 
             h2 {
                 margin-top: 4px;
@@ -35,6 +36,8 @@
                 font-size: 0.75rem;
                 color: var(--text-subtle-2);
                 white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
         }
 
